// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> default matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--orion:not(.k-Button--rounded).k-Button--nano,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--micro,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--tiny {
  --Button-border-radius: 0.25rem;
}

.c0.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--big,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
  --Button-border-radius: 0.375rem;
}

.c0.k-Button--rounded {
  --Button-border-radius: 50%;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
  .c0.k-Button--orion:not(.k-Button--rounded).k-Button--big,
  .c0.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
  .c0.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
    --Button-border-radius: 0.5rem;
  }
}

<button
  aria-label="Close"
  className="c0 k-Button k-Button--regular k-Button--hydrogen k-Button--orion k-Button--fit-icon k-Button--mobile-fit-none"
  style={
    Object {
      "--Button-border-radius": null,
    }
  }
  title="Close"
  type="button"
>
  <svg
    fill="#222"
    height="8"
    viewBox="0 0 8 8"
    width="8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
    />
    <path
      d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
    />
  </svg>
</button>
`;

exports[`<CloseButton /> with props matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--orion:not(.k-Button--rounded).k-Button--nano,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--micro,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--tiny {
  --Button-border-radius: 0.25rem;
}

.c0.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--big,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
.c0.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
  --Button-border-radius: 0.375rem;
}

.c0.k-Button--rounded {
  --Button-border-radius: 50%;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
  .c0.k-Button--orion:not(.k-Button--rounded).k-Button--big,
  .c0.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
  .c0.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
    --Button-border-radius: 0.5rem;
  }
}

<button
  aria-label="close"
  className="c0 k-Button k-Button--tiny k-Button--hydrogen k-Button--orion k-Button--fit-icon k-Button--mobile-fit-none"
  style={
    Object {
      "--Button-border-radius": null,
    }
  }
  title="Close"
  type="button"
>
  <svg
    fill="#222"
    height="8"
    viewBox="0 0 8 8"
    width="8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
    />
    <path
      d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
    />
  </svg>
</button>
`;
